# Changelog

## Version 4.0.0

* Adding multi-lingual support (thanks to leonardyan)
* Adding profiles
* Adding |=====  | Progress Bars
* Adding option to download newest FFmpeg on Windows
* Adding #111 HDR10+ Optimization flag for x265 (thanks to SlashX)
* Changing large internal re-write
* Changing so it opens the file dialog for new video to last used directory
* Fixing #116 how HDR10 options for x265 work (thanks to HannesJo0139)
* Fixing thumbnails not being generated properly on 10-bit non bt2020 files

## Version  3.4.3

* Fixing #110 (multi) no warning for those updating about automatic burn-in subtitles (thanks to loungebob)
* Fixing #110 (multi) no option to disable automatic subtitle burn-in behavior  (thanks to loungebob)
* Fixing #110 (multi) waiting cursor may not go away by removing for now (thanks to loungebob)
* Fixing timeout for covers extraction not working
* Fixing changing settings without video would crash GUI

## Version  3.4.2

* Fixing color space details being passed correctly to everything other than x265 as well
* Fixing HDR10+ details on README
* Fixing #102 better with taking into account master-display ratios (thanks to leonardyan)
* Fixing VP9 to accept profiles so HDR10 can be copied properly
* Fixing #108 HEVC can select wrong video track for encoding (thanks to Zeid164)

## Version  3.4.1

* Fixing #102 color space and HDR details not parsed from webm correctly (thanks to leonardyan)
* Fixing no warning messages for HDR10+ experimental feature

## Version  3.4.0

* Adding #83 HDR10+ support for x265 (thanks to SlashX)
* Adding x265 params hdr10, hdr10-opt, aq-mode and repeat-headers
* Adding basic splash info and waiting cursor for events
* Adding button to open config file from setting panel
* Changing that autocrop will test two spots if possible (thanks to HannesJo0139)
* Changing covers generated in their own temp directory
* Fixing #103 x265-params were being pre-pended with an extra ":" (thanks to Zeid164)