@@ -24,3 +24,4 @@ down_arrow_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icons
 settings_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icons/setting.png")).resolve())
 folder_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icons/folder.png")).resolve())
 play_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icons/play.png")).resolve())
+profile_add_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icons/text-document-add.png")).resolve())
